--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <script defer src="https://code.jquery.com/jquery-1.12.4.js"></script>
   <script defer src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <script defer src="js/main.js"></script>
+  <script defer src="js/accordion.js"></script>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/animation.css">
@@ -579,16 +580,7 @@
     </div>
   </footer>
 
-  <script>
-    $( function() {
-  $( "#accordion" ).accordion({
-    active: 'false',
-    collapsible: 'true',
-    heightStyle:  'content',
-    icons: 'false',
-  });
-  });
-  </script>
+
 
   <script type="text/javascript">
 
