--- a/catalog.html
+++ b/catalog.html
@@ -158,7 +158,7 @@
             </div>
             <div class="col-1">
               <div class="filter__box">
-                <div class="filter-box__content filter-box__content_down">
+                <div class="filter-box__content filter-box__content_down _anim-items">
                   <p class="filter-box__title">Expert pro</p>
                   <span class="filter-box__info">Скандинавский дуб</span>
                   <div class="filter-box__img-1"></div>
@@ -178,7 +178,7 @@
             </div>
             <div class="col-1">
               <div class="filter__box">
-                <div class="filter-box__content  filter-box__content_down">
+                <div class="filter-box__content  filter-box__content_down _anim-items">
                   <p class="filter-box__title">Expert pro</p>
                   <span class="filter-box__info">Скандинавский дуб</span>
                   <div class="filter-box__img"></div>
@@ -232,7 +232,7 @@
             </div>
             <div class="col-1">
               <div class="filter__box">
-                <div class="filter-box__content  filter-box__content_down">
+                <div class="filter-box__content  filter-box__content_down _anim-items">
                   <p class="filter-box__title">Expert pro</p>
                   <span class="filter-box__info">Скандинавский дуб</span>
                   <div class="filter-box__img"></div>
@@ -252,7 +252,7 @@
             </div>
             <div class="col-1">
               <div class="filter__box">
-                <div class="filter-box__content   filter-box__content_down">
+                <div class="filter-box__content   filter-box__content_down _anim-items">
                   <p class="filter-box__title">Expert pro</p>
                   <span class="filter-box__info">Скандинавский дуб</span>
                   <div class="filter-box__img "></div>
@@ -287,41 +287,49 @@
         </div>
         <div class="catalog-ofert__row">
           <div class="block__col-300 unique__row">
-            <ul>
+            <ul class="_anim-items">
               <li class="col__item col__item_first">
                 <p class="section__text">Качественные замки и ручки</p>
+                <span class="bottom__line"></span>
               </li>
               <li class="col__item">
                 <p class="section__text">Изменение цвета и рисунка фрезеровки</p>
+                <span class="bottom__line"></span>
               </li>
               <li class="col__item">
                 <p class="section__text">Замер размеров входной двери </p>
+                <span class="bottom__line"></span>
               </li>
             </ul>
           </div>
           <div class="block__col-300 unique__row">
-            <ul>
+            <ul  class="_anim-items">
               <li class="col__item">
                 <p class="section__text">Доставка</p>
+                <span class="bottom__line"></span>
               </li>
               <li class="col__item">
                 <p class="section__text">Демонтаж старой двери</p>
+                <span class="bottom__line"></span>
               </li>
               <li class="col__item">
                 <p class="section__text">Установка новой двери</p>
+                <span class="bottom__line"></span>
               </li>
             </ul>
           </div>
           <div class="block__col-300 unique__row">
-            <ul>
+            <ul class="_anim-items">
               <li class="col__item">
                 <p class="section__text">Заделка швов монтажной пеной</p>
+                <span class="bottom__line"></span>
               </li>
               <li class="col__item">
                 <p class="section__text">Уборка мусора</p>
               </li>
               <li class="col__item">
                 <p class="section__text">Утилизация старой двери</p>
+                <span class="bottom__line"></span>
               </li>
             </ul>
           </div>
@@ -329,7 +337,7 @@
         <div class="block__row block__view">
           <div class="section__col-2">
             <div class="block__row block__row-direction">
-              <div class="component">
+              <div class="component _anim-items">
               </div>
               <div class="special-offer__card_small">
                 <div class="special-offer__box_small catalog__box-small">
@@ -383,7 +391,7 @@
           </div>
           <div class="col-1">
             <div class="filter__box">
-              <div class="filter-box__content filter-box__content_down">
+              <div class="filter-box__content filter-box__content_down _anim-items">
                 <p class="filter-box__title">Expert pro</p>
                 <span class="filter-box__info">Скандинавский дуб</span>
                 <div class="filter-box__img"></div>
@@ -403,7 +411,7 @@
           </div>
           <div class="col-1">
             <div class="filter__box">
-              <div class="filter-box__content  filter-box__content_down">
+              <div class="filter-box__content  filter-box__content_down _anim-items">
                 <p class="filter-box__title">Expert pro</p>
                 <span class="filter-box__info">Скандинавский дуб</span>
                 <div class="filter-box__img"></div>
@@ -457,7 +465,7 @@
           </div>
           <div class="col-1">
             <div class="filter__box">
-              <div class="filter-box__content  filter-box__content_down">
+              <div class="filter-box__content  filter-box__content_down _anim-items">
                 <p class="filter-box__title">Expert pro</p>
                 <span class="filter-box__info">Скандинавский дуб</span>
                 <div class="filter-box__img"></div>
@@ -470,23 +478,53 @@
     </div>
 
     <section class="newcomer__section">
-      <div class="newcomer__section-row">
-        <div class="newcomer__section-col"></div>
-        <div class="newcomer__section-col_long"></div>
-      </div>
-      <div class="action__container">
-        <div class="container">
-          <div class="newcomer__container">
-            <div class="newcomer__close">&#10005;</div>
-            <h6 class="newcomer__title">Всем новоселам даем особо выгодные условия — двери со скидкой 7%</h6>
-            <div class="newcomer-btn">
-              <a href="#" class="main-btn__link newcomer-btn__link">Получить скидку</a>
-              <div class="main-btn__arrow newcomer-btn__arrow"><span
-                  class="circle"></span></div>
-            </div>
+      <div class="newcomer__tab newcomer__tab_active" data-target="one">
+        <div class="newcomer__section-row">
+          <div class="newcomer__section-col">
             <div class="newcomer__bullet">
-              <span class="bullet bullet__active"></span>
-              <span class="bullet"></span>
+              <span class="bullet bullet__active" data-path="one"></span>
+              <span class="bullet" data-path="two"></span>
+            </div>
+          </div>
+          <div class="newcomer__section-col_long"></div>
+        </div>
+        <div class="action__container">
+          <div class="container">
+            <div class="newcomer__container">
+              <div class="newcomer__close">&#10005;</div>
+              <h6 class="newcomer__title">Всем новоселам даем особо выгодные условия — двери со скидкой 7%</h6>
+              <div class="newcomer-btn _anim-items">
+                <a href="#" class="main-btn__link newcomer-btn__link _anim-items">Получить скидку</a>
+                <div class="main-btn__arrow newcomer-btn__arrow _anim-items"><span
+                    class="circle _anim-items"></span></div>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="newcomer__tab" data-target="two">
+        <div class="newcomer__section-row">
+          <div class="newcomer__section-col">
+            <div class="newcomer__bullet">
+              <span class="bullet bullet__active" data-path="one"></span>
+              <span class="bullet" data-path="two"></span>
+            </div>
+          </div>
+          <div class="newcomer__section-col_long newcomer__section-col_long2"></div>
+        </div>
+        <div class="action__container">
+          <div class="container">
+            <div class="newcomer__container">
+              <div class="newcomer__close">&#10005;</div>
+              <h6 class="newcomer__title">Свое уважение к пожилым людям мы воплотили в возможность получения ими специальной скидки в размере 10% на все модели</h6>
+              <div class="newcomer-btn _anim-items">
+                <a href="#" class="main-btn__link newcomer-btn__link _anim-items">Получить скидку</a>
+                <div class="main-btn__arrow newcomer-btn__arrow _anim-items">
+                  <span
+                    class="circle _anim-items"></span>
+                  </div>
+              </div>
             </div>
           </div>
         </div>
@@ -509,7 +547,7 @@
           </div>
           <div class="col-1">
             <div class="filter__box">
-              <div class="filter-box__content filter-box__content_down">
+              <div class="filter-box__content filter-box__content_down _anim-items">
                 <p class="filter-box__title">Expert pro</p>
                 <span class="filter-box__info">Скандинавский дуб</span>
                 <div class="filter-box__img"></div>
@@ -529,7 +567,7 @@
           </div>
           <div class="col-1">
             <div class="filter__box">
-              <div class="filter-box__content  filter-box__content_down">
+              <div class="filter-box__content  filter-box__content_down _anim-items">
                 <p class="filter-box__title">Expert pro</p>
                 <span class="filter-box__info">Скандинавский дуб</span>
                 <div class="filter-box__img"></div>
@@ -642,6 +680,22 @@
     </div>
   </footer>
 
+
+  <script type="text/javascript">
+  document.querySelectorAll('.bullet').forEach(function (tabsBtn) {
+  tabsBtn.addEventListener('click', function(event) {
+    const path = event.currentTarget.dataset.path
+    document.querySelectorAll('.bullet').forEach(function(rem) {
+      rem.classList.toggle('bullet__active')
+    })
+    tabsBtn.classList.add('bullet__active')
+    document.querySelectorAll('.newcomer__tab').forEach(function(tabContent) {
+        tabContent.classList.remove('newcomer__tab_active')
+    })
+    document.querySelector(`[data-target="${path}"]`).classList.add('newcomer__tab_active')
+  })
+});
+  </script>
 </body>
 
 </html>
