anim catalog done

--- a/catalog.html
+++ b/catalog.html
@@ -80,7 +80,7 @@
       </ul>
     </div>
   </header>
-  <main>
+  <main class="caralog__main">
     <div class="container">
       <div class="filter__section">
         <div class="block__row filter__sectio-row">
