--- a/card-standart.html
+++ b/card-standart.html
@@ -683,11 +683,11 @@
             <h6 class="newcomer__title visualization__title">Бесплатная визуализация двери в вашем интерьере</h6>
             <p class="visualization__text">Выбрать теперь проще! Наши дизайнеры бесплатно сделают визуализацию двери,
               которая вам понравилась, в вашем интерьере.</p>
-            <div class="newcomer-btn">
-              <a href="#" class="main-btn__link newcomer-btn__link">Получить скидку</a>
-              <div class="main-btn__arrow newcomer-btn__arrow visualizationr-btn__arrow"><span
-                  class="main-btn__circle newcomer-btn__circle"></span></div>
-            </div>
+              <div class="newcomer-btn _anim-items">
+                <a href="#" class="main-btn__link newcomer-btn__link _anim-items">Заказать визуализацию</a>
+                <div class="main-btn__arrow newcomer-btn__arrow _anim-items"><span
+                    class="circle _anim-items"></span></div>
+              </div>
           </div>
           <img src="img/visualization.png" alt="Наша дверь в вашем интерьере" class="visualization-img">
         </div>
